test/integration/bad/ode/stanc.expected
  $ ../../../../../install/default/bin/stanc bad_bdf_control_function_return.stan

Semantic error in 'bad_bdf_control_function_return.stan', line 13, column 6 to line 15, column 35:
   -------------------------------------------------
    11:  model {
    12:    real x[2, 2]
    13:      = integrate_ode_bdf(twoCptModelODE,
               ^
    14:                          {1, 1.3}, 1.0, { 2.2, 3 }, { 1.0 }, { 1.0 }, { 2 },
    15:                          10, 10, 10);
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real, real[], real, real[], real[], real[], int[], int, int, int.

  $ ../../../../../install/default/bin/stanc bad_fun_type.stan

Semantic error in 'bad_fun_type.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_bdf.stan

Semantic error in 'bad_fun_type_bdf.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_bdf_control.stan

Semantic error in 'bad_fun_type_bdf_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_fun_type_rk45.stan

Semantic error in 'bad_fun_type_rk45.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_fun_type_rk45_control.stan

Semantic error in 'bad_fun_type_rk45_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real[], real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t_type.stan

Semantic error in 'bad_t_type.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_bdf.stan

Semantic error in 'bad_t_type_bdf.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_bdf_control.stan

Semantic error in 'bad_t_type_bdf_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_t_type_rk45.stan

Semantic error in 'bad_t_type_rk45.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_t_type_rk45_control.stan

Semantic error in 'bad_t_type_rk45_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], matrix, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_theta_type.stan

Semantic error in 'bad_theta_type.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_bdf.stan

Semantic error in 'bad_theta_type_bdf.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_bdf_control.stan

Semantic error in 'bad_theta_type_bdf_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_theta_type_rk45.stan

Semantic error in 'bad_theta_type_rk45.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_theta_type_rk45_control.stan

Semantic error in 'bad_theta_type_rk45_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[,], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_type.stan

Semantic error in 'bad_ts_type.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_bdf.stan

Semantic error in 'bad_ts_type_bdf.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_bdf_control.stan

Semantic error in 'bad_ts_type_bdf_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_ts_type_rk45.stan

Semantic error in 'bad_ts_type_rk45.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_ts_type_rk45_control.stan

Semantic error in 'bad_ts_type_rk45_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[,], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_int_type.stan

Semantic error in 'bad_x_int_type.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_bdf.stan

Semantic error in 'bad_x_int_type_bdf.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_bdf_control.stan

Semantic error in 'bad_x_int_type_bdf_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_int_type_rk45.stan

Semantic error in 'bad_x_int_type_rk45.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,].

  $ ../../../../../install/default/bin/stanc bad_x_int_type_rk45_control.stan

Semantic error in 'bad_x_int_type_rk45_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[,], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_type.stan

Semantic error in 'bad_x_type.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_bdf.stan

Semantic error in 'bad_x_type_bdf.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_bdf_control.stan

Semantic error in 'bad_x_type_bdf_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_type_rk45.stan

Semantic error in 'bad_x_type_rk45.stan', line 27, column 10 to line 33, column 27:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_type_rk45_control.stan

Semantic error in 'bad_x_type_rk45_control.stan', line 27, column 10 to line 33, column 43:
   -------------------------------------------------
    25:  transformed parameters {
    26:    real y_hat[10,2];
    27:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    28:                       y0,            // initial state
    29:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], vector[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_var_type.stan

Semantic error in 'bad_x_var_type.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_bdf.stan

Semantic error in 'bad_x_var_type_bdf.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_bdf_control.stan

Semantic error in 'bad_x_var_type_bdf_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_x_var_type_rk45.stan

Semantic error in 'bad_x_var_type_rk45.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_x_var_type_rk45_control.stan

Semantic error in 'bad_x_var_type_rk45_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_y_type.stan

Semantic error in 'bad_y_type.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_bdf.stan

Semantic error in 'bad_y_type_bdf.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_bdf_control.stan

Semantic error in 'bad_y_type_bdf_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_bdf(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_bdf'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[], real, real, int.

  $ ../../../../../install/default/bin/stanc bad_y_type_rk45.stan

Semantic error in 'bad_y_type_rk45.stan', line 26, column 10 to line 32, column 27:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[].

  $ ../../../../../install/default/bin/stanc bad_y_type_rk45_control.stan

Semantic error in 'bad_y_type_rk45_control.stan', line 26, column 10 to line 32, column 43:
   -------------------------------------------------
    24:  transformed parameters {
    25:    real y_hat[10,2];
    26:    y_hat = integrate_ode_rk45(harm_osc_ode,  // system
                   ^
    27:                       y0,            // initial state
    28:                       t0,            // initial time
   -------------------------------------------------

Ill-typed arguments supplied to function 'integrate_ode_rk45'. Available signatures: 
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[]) => real[,]
((real, real[], real[], data real[], data int[]) => real[], real[], real, real[], real[], data real[], data int[], data real, data real, data real) => real[,]
Instead supplied arguments of incompatible type: (real, real[], real[], real[], int[]) => real[], real[,], real, real[], real[], real[], int[], real, real, int.

